pkg/plugins/runtime/gateway/testdata/05-gateway-listener.yaml
Clusters:
  Resources: {}
Endpoints:
  Resources: {}
Listeners:
  Resources:
    default-gateway:HTTPS:443:
      address:
        socketAddress:
          address: 192.168.1.1
          portValue: 443
      enableReusePort: true
      filterChains:
      - filterChainMatch:
          serverNames:
          - bar.example.com
          transportProtocol: tls
        filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: gzip-compress
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                compressorLibrary:
                  name: gzip
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                responseDirectionConfig:
                  disableOnEtagHeader: true
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            internalAddressConfig:
              cidrRanges:
              - addressPrefix: 127.0.0.1
                prefixLen: 32
              - addressPrefix: ::1
                prefixLen: 128
            mergeSlashes: true
            normalizePath: true
            pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: default-gateway:HTTPS:443:bar.example.com
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            useRemoteAddress: true
        transportSocket:
          name: envoy.transport_sockets.tls
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            commonTlsContext:
              alpnProtocols:
              - h2
              - http/1.1
              tlsCertificateSdsSecretConfigs:
              - name: cert.rsa:secret:server-certificate
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tlsParams:
                tlsMinimumProtocolVersion: TLSv1_2
            requireClientCertificate: false
      - filterChainMatch:
          serverNames:
          - foo.example.com
          transportProtocol: tls
        filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: gzip-compress
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                compressorLibrary:
                  name: gzip
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                responseDirectionConfig:
                  disableOnEtagHeader: true
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            internalAddressConfig:
              cidrRanges:
              - addressPrefix: 127.0.0.1
                prefixLen: 32
              - addressPrefix: ::1
                prefixLen: 128
            mergeSlashes: true
            normalizePath: true
            pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: default-gateway:HTTPS:443:foo.example.com
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            useRemoteAddress: true
        transportSocket:
          name: envoy.transport_sockets.tls
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            commonTlsContext:
              alpnProtocols:
              - h2
              - http/1.1
              tlsCertificateSdsSecretConfigs:
              - name: cert.rsa:secret:server-certificate
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tlsParams:
                tlsMinimumProtocolVersion: TLSv1_2
            requireClientCertificate: false
      - filterChainMatch:
          serverNames:
          - '*.example.com'
          transportProtocol: tls
        filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: gzip-compress
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                compressorLibrary:
                  name: gzip
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                responseDirectionConfig:
                  disableOnEtagHeader: true
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            internalAddressConfig:
              cidrRanges:
              - addressPrefix: 127.0.0.1
                prefixLen: 32
              - addressPrefix: ::1
                prefixLen: 128
            mergeSlashes: true
            normalizePath: true
            pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: default-gateway:HTTPS:443:*.example.com
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            useRemoteAddress: true
        transportSocket:
          name: envoy.transport_sockets.tls
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            commonTlsContext:
              alpnProtocols:
              - h2
              - http/1.1
              tlsCertificateSdsSecretConfigs:
              - name: cert.rsa:secret:server-certificate
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tlsParams:
                tlsMinimumProtocolVersion: TLSv1_2
            requireClientCertificate: false
      - filterChainMatch:
          transportProtocol: tls
        filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: gzip-compress
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                compressorLibrary:
                  name: gzip
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                responseDirectionConfig:
                  disableOnEtagHeader: true
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            internalAddressConfig:
              cidrRanges:
              - addressPrefix: 127.0.0.1
                prefixLen: 32
              - addressPrefix: ::1
                prefixLen: 128
            mergeSlashes: true
            normalizePath: true
            pathWithEscapedSlashesAction: UNESCAPE_AND_REDIRECT
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: default-gateway:HTTPS:443:*
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            useRemoteAddress: true
        transportSocket:
          name: envoy.transport_sockets.tls
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            commonTlsContext:
              alpnProtocols:
              - h2
              - http/1.1
              tlsCertificateSdsSecretConfigs:
              - name: cert.rsa:secret:server-certificate
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tlsParams:
                tlsMinimumProtocolVersion: TLSv1_2
            requireClientCertificate: false
      listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: default-gateway:HTTPS:443
      perConnectionBufferLimitBytes: 32768
      trafficDirection: INBOUND
Routes:
  Resources:
    default-gateway:HTTPS:443:*:
      ignorePortInHostMatching: true
      name: default-gateway:HTTPS:443:*
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - '*'
        name: '*'
        requireTls: ALL
        responseHeadersToAdd:
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: Strict-Transport-Security
            value: max-age=31536000; includeSubDomains
        routes:
        - directResponse:
            body:
              inlineString: |
                This is a Kuma MeshGateway. No routes match this MeshGateway!
            status: 404
          match:
            prefix: /
    default-gateway:HTTPS:443:*.example.com:
      ignorePortInHostMatching: true
      name: default-gateway:HTTPS:443:*.example.com
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - '*.example.com'
        name: '*.example.com'
        requireTls: ALL
        responseHeadersToAdd:
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: Strict-Transport-Security
            value: max-age=31536000; includeSubDomains
        routes:
        - directResponse:
            body:
              inlineString: |
                This is a Kuma MeshGateway. No routes match this MeshGateway!
            status: 404
          match:
            prefix: /
    default-gateway:HTTPS:443:bar.example.com:
      ignorePortInHostMatching: true
      name: default-gateway:HTTPS:443:bar.example.com
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - bar.example.com
        name: bar.example.com
        requireTls: ALL
        responseHeadersToAdd:
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: Strict-Transport-Security
            value: max-age=31536000; includeSubDomains
        routes:
        - directResponse:
            body:
              inlineString: |
                This is a Kuma MeshGateway. No routes match this MeshGateway!
            status: 404
          match:
            prefix: /
    default-gateway:HTTPS:443:foo.example.com:
      ignorePortInHostMatching: true
      name: default-gateway:HTTPS:443:foo.example.com
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - foo.example.com
        name: foo.example.com
        requireTls: ALL
        responseHeadersToAdd:
        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
          header:
            key: Strict-Transport-Security
            value: max-age=31536000; includeSubDomains
        routes:
        - directResponse:
            body:
              inlineString: |
                This is a Kuma MeshGateway. No routes match this MeshGateway!
            status: 404
          match:
            prefix: /
Runtimes:
  Resources:
    gateway.listeners:
      layer: {}
      name: gateway.listeners
Secrets:
  Resources:
    cert.rsa:secret:server-certificate:
      name: cert.rsa:secret:server-certificate
      tlsCertificate:
        certificateChain:
          inlineString: |+
            -----BEGIN CERTIFICATE-----
            MIIDJjCCAg6gAwIBAgIRAI+Hqx9HaFRq8yilXfKkQRIwDQYJKoZIhvcNAQELBQAw
[...]
            ZMSGbXcnLNWJOWRMoymSpk8a9/hXXKVYHppbkAeFGRwhm7XDXsCwq5Wd
            -----END CERTIFICATE-----

        privateKey:
          inlineString: |
            -----BEGIN RSA PRIVATE KEY-----
            MIIEowIBAAKCAQEA3vV3W/5rmc9X/cloYvpAgoHq0nFY6VIdZSECyWL6zkPnK4xO
[...]
            SK4u80+3Mzg9poUv80lwtuJ8xDWpQcRIp1CfqwkvIA393JCw7VCK
            -----END RSA PRIVATE KEY-----
